update documents and README

--- a/document/Result.html
+++ b/document/Result.html
@@ -26,7 +26,7 @@
 <meta name="author" content="An Phi">
 
 
-<meta name="date" content="2017-05-06">
+<meta name="date" content="2017-05-07">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -71,7 +71,10 @@
 </ul></li>
 <li class="chapter" data-level="2" data-path="algorithms.html"><a href="algorithms.html"><i class="fa fa-check"></i><b>2</b> Algorithms</a></li>
 <li class="chapter" data-level="3" data-path="reduction.html"><a href="reduction.html"><i class="fa fa-check"></i><b>3</b> Reduction, Beauty and Peril</a></li>
-<li class="chapter" data-level="4" data-path="Result.html"><a href="Result.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a></li>
+<li class="chapter" data-level="4" data-path="result.html"><a href="result.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
+<li class="chapter" data-level="4.1" data-path="result.html"><a href="result.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
+<li class="chapter" data-level="4.2" data-path="result.html"><a href="result.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
+</ul></li>
 <li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 </ul>
@@ -91,8 +94,10 @@
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="Result" class="section level1">
+<div id="result" class="section level1">
 <h1><span class="header-section-number">Section 4</span> Result and Discussion</h1>
+<div id="accuracy" class="section level2">
+<h2><span class="header-section-number">4.1</span> Accuracy</h2>
 <p>Below is the statistical summary for the values returned from the Knapsack experiments.</p>
 <table>
 <thead>
@@ -110,47 +115,95 @@
 <tbody>
 <tr class="odd">
 <td align="left">MaxValDP</td>
-<td align="left">20889</td>
-<td align="left">18730</td>
-<td align="left">10334</td>
-<td align="left">30542</td>
-<td align="left">20208</td>
+<td align="left">131586</td>
+<td align="left">117691</td>
+<td align="left">55673</td>
+<td align="left">196774</td>
+<td align="left">141102</td>
 <td align="left">1736</td>
-<td align="left">52584</td>
+<td align="left">361083</td>
 </tr>
 <tr class="even">
 <td align="left">Greedy</td>
-<td align="left">20844</td>
-<td align="left">18706</td>
-<td align="left">10322</td>
-<td align="left">30540</td>
-<td align="left">20218</td>
+<td align="left">131553</td>
+<td align="left">117650</td>
+<td align="left">55634</td>
+<td align="left">196754</td>
+<td align="left">141120</td>
 <td align="left">1706</td>
-<td align="left">52565</td>
+<td align="left">361060</td>
 </tr>
 <tr class="odd">
 <td align="left">MinCostDP</td>
-<td align="left">20889</td>
-<td align="left">18730</td>
-<td align="left">10334</td>
-<td align="left">30542</td>
-<td align="left">20208</td>
+<td align="left">131586</td>
+<td align="left">117691</td>
+<td align="left">55673</td>
+<td align="left">196774</td>
+<td align="left">141102</td>
 <td align="left">1736</td>
-<td align="left">52584</td>
+<td align="left">361083</td>
 </tr>
 <tr class="even">
 <td align="left">FPTAS</td>
-<td align="left">20740</td>
-<td align="left">18556</td>
-<td align="left">10187</td>
-<td align="left">30341</td>
-<td align="left">20154</td>
+<td align="left">131437</td>
+<td align="left">117545</td>
+<td align="left">55555</td>
+<td align="left">196629</td>
+<td align="left">141074</td>
 <td align="left">1706</td>
-<td align="left">52425</td>
+<td align="left">360857</td>
 </tr>
 </tbody>
 </table>
-<p>Next, we present the summary for the running time of the 4 different algorithms (all results are in milliseconds)</p>
+<p>It is totally expected that <span style="font-variant: small-caps;">MaxValDP</span> and <span style="font-variant: small-caps;">MinCostDP</span> have equal accuracy since both are supposed to produce the optimal value for each instance. To compare the accuracy of <span style="font-variant: small-caps;">Greedy</span> and <span style="font-variant: small-caps;">FPTAS</span>, we should look at figure <a href="result.html#fig:plot-value-error">4.1</a> of the error produced by these 2 algorithms. Note that in this plot, we omit the outliers whose values range outside 1.5 times of the inner quartile range (IQR).</p>
+<div class="figure" style="text-align: center"><span id="fig:plot-value-error"></span>
+<img src="report_files/figure-html/plot-value-error-1.png" alt="Error of FPTAS and Greedy algorithms" width="576" />
+<p class="caption">
+Figure 4.1: Error of FPTAS and Greedy algorithms
+</p>
+</div>
+<p>Clearly, <span style="font-variant: small-caps;">FPTAS</span> does a lot worse than <span style="font-variant: small-caps;">Greedy</span>. This is expected to us because <span style="font-variant: small-caps;">Greedy</span> is designed to obtain an optimal value in 50% range of the actual optimal value, while <span style="font-variant: small-caps;">FPTAS</span> is designed to work for arbitrary precision–in this case, we set <span class="math inline">\(\epsilon\)</span> to 0.5 which should also guarantee values in 50% range of the optimal value. To see the range of error that each algorithm produce, we can refer to the summary of percentage error below.</p>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Name</th>
+<th align="left">Mean</th>
+<th align="left">Median</th>
+<th align="left">L.Quartile</th>
+<th align="left">U.Quartile</th>
+<th align="left">IQR</th>
+<th align="left">Min</th>
+<th align="left">Max</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Greedy</td>
+<td align="left">0.096</td>
+<td align="left">0.014</td>
+<td align="left">0.001</td>
+<td align="left">0.047</td>
+<td align="left">0.046</td>
+<td align="left">0</td>
+<td align="left">16.935</td>
+</tr>
+<tr class="even">
+<td align="left">FPTAS</td>
+<td align="left">0.26</td>
+<td align="left">0.111</td>
+<td align="left">0.074</td>
+<td align="left">0.22</td>
+<td align="left">0.145</td>
+<td align="left">0</td>
+<td align="left">7.02</td>
+</tr>
+</tbody>
+</table>
+<p>From both the plot and the table, we can see that both algorithms actually do much better than expected, the percentage errors fall way below 50%. This might have to do with the way we <strong>randomly</strong> generate the problem instances, since it is often the edge cases that result in the 50% error. Also, we can see that the maximum percentage error produced by <span style="font-variant: small-caps;">FPTAS</span> is way less than that of <span style="font-variant: small-caps;">Greedy</span>. This could be due to the mechanism of each algorithm. In section <a href="algorithms.html#algorithms">2</a>, we mentioned that <span style="font-variant: small-caps;">Greedy</span> has a totally different approach to choosing the items and has a final step where it might disregard previously obtained results and just choose the item with maximum value; whereas <span style="font-variant: small-caps;">FPTAS</span> essentially uses <span style="font-variant: small-caps;">MinCostDP</span> and its errors are due to the truncation while scaling up and down the values of items, which potentially results in smaller errors.</p>
+</div>
+<div id="running-time" class="section level2">
+<h2><span class="header-section-number">4.2</span> Running Time</h2>
+<p>Next, we present the summary for the running time (milliseconds) of the 4 different algorithms.</p>
 <table>
 <thead>
 <tr class="header">
@@ -167,54 +220,105 @@
 <tbody>
 <tr class="odd">
 <td align="left">MaxValDP</td>
-<td align="left">3.2176</td>
-<td align="left">1.9774</td>
-<td align="left">0.5418</td>
-<td align="left">4.8476</td>
-<td align="left">4.3058</td>
-<td align="left">0.0362</td>
-<td align="left">15.4099</td>
+<td align="left">142.861</td>
+<td align="left">63.797</td>
+<td align="left">14.824</td>
+<td align="left">209.059</td>
+<td align="left">194.235</td>
+<td align="left">0.036</td>
+<td align="left">941.761</td>
 </tr>
 <tr class="even">
 <td align="left">Greedy</td>
-<td align="left">0.021</td>
-<td align="left">0.0174</td>
-<td align="left">0.0141</td>
-<td align="left">0.0218</td>
-<td align="left">0.0078</td>
-<td align="left">0.0042</td>
-<td align="left">0.9377</td>
+<td align="left">0.068</td>
+<td align="left">0.071</td>
+<td align="left">0.04</td>
+<td align="left">0.094</td>
+<td align="left">0.055</td>
+<td align="left">0.004</td>
+<td align="left">0.982</td>
 </tr>
 <tr class="odd">
 <td align="left">MinCostDP</td>
-<td align="left">6.35</td>
-<td align="left">5.1616</td>
-<td align="left">1.3391</td>
-<td align="left">10.0938</td>
-<td align="left">8.7547</td>
-<td align="left">0.1814</td>
-<td align="left">38.636</td>
+<td align="left">392.519</td>
+<td align="left">249.554</td>
+<td align="left">56.087</td>
+<td align="left">660.346</td>
+<td align="left">604.258</td>
+<td align="left">0.181</td>
+<td align="left">1521.953</td>
 </tr>
 <tr class="even">
 <td align="left">FPTAS</td>
-<td align="left">0.9644</td>
-<td align="left">0.6384</td>
-<td align="left">0.1052</td>
-<td align="left">1.5369</td>
-<td align="left">1.4317</td>
-<td align="left">0.0177</td>
-<td align="left">5.3458</td>
+<td align="left">453.986</td>
+<td align="left">172.883</td>
+<td align="left">19.96</td>
+<td align="left">812.275</td>
+<td align="left">792.315</td>
+<td align="left">0.018</td>
+<td align="left">2175.657</td>
 </tr>
 </tbody>
 </table>
 <p>These are just the summary of the result. Beside these, for each problem instance, we also collect the number of items <span class="math inline">\(N\)</span>, the budget, and the maximum value, as these might help us understand the running time results better.</p>
-<ul>
-<li><span style="font-variant: small-caps;">MaxValDP</span></li>
-<li><span style="font-variant: small-caps;">MinCostDP</span></li>
-<li><span style="font-variant: small-caps;">Greedy</span></li>
-<li><span style="font-variant: small-caps;">FPTAS</span></li>
-</ul>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Name</th>
+<th align="left">Mean</th>
+<th align="left">Median</th>
+<th align="left">L.Quartile</th>
+<th align="left">U.Quartile</th>
+<th align="left">IQR</th>
+<th align="left">Min</th>
+<th align="left">Max</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">N</td>
+<td align="left">355</td>
+<td align="left">355</td>
+<td align="left">180</td>
+<td align="left">530</td>
+<td align="left">350</td>
+<td align="left">10</td>
+<td align="left">700</td>
+</tr>
+<tr class="even">
+<td align="left">Budget</td>
+<td align="left">88645</td>
+<td align="left">66829</td>
+<td align="left">25605</td>
+<td align="left">134347</td>
+<td align="left">108742</td>
+<td align="left">877</td>
+<td align="left">341526</td>
+</tr>
+<tr class="odd">
+<td align="left">Max Value</td>
+<td align="left">994</td>
+<td align="left">998</td>
+<td align="left">995</td>
+<td align="left">1000</td>
+<td align="left">5</td>
+<td align="left">642</td>
+<td align="left">1000</td>
+</tr>
+</tbody>
+</table>
+<p>Through the running time summary alone, we can already see a general trend in the running time. <span style="font-variant: small-caps;">Greedy</span> is the clear winner in terms of speed. We have mentioned in section <a href="algorithms.html#algorithms">2</a> that the running time of <span style="font-variant: small-caps;">Greedy</span> is majorly contributed by the sorting step–the choosing step after that is rather trivial. As such, the running time depends on the input size, not the values of the items, not the budget.</p>
+<p><span style="font-variant: small-caps;">MaxValDP</span> has a significantly higher running time as compared to that of <span style="font-variant: small-caps;">Greedy</span>. This is expected as we can see the in the summary of instance information, the budget is much larger than the number of instance.</p>
+<p>Another observation is that <span style="font-variant: small-caps;">FPTAS</span> and <span style="font-variant: small-caps;">MinCostDP</span> have almost similar running time. Again this can be explained by the fact that <span style="font-variant: small-caps;">FPTAS</span> uses <span style="font-variant: small-caps;">MinCostDP</span> internally; i.e. <span style="font-variant: small-caps;">FPTAS</span> takes slightly longer due to the scaling and trunscating steps. Their running time, though, is almost 3 times as big as that of <span style="font-variant: small-caps;">MaxValDP</span>. This totally depends on the choice of budget and the maximum value of item in the problem instance.</p>
+<div class="figure" style="text-align: center"><span id="fig:plot-function"></span>
+<img src="report_files/figure-html/plot-function-1.png" alt="Running time of MinCostDP (left) and MaxValDP (right)" width="720" />
+<p class="caption">
+Figure 4.2: Running time of MinCostDP (left) and MaxValDP (right)
+</p>
+</div>
+<p>Since we conduct the experiment with changing values of <span class="math inline">\(N\)</span>, we can then make 3D plots of running time against <span class="math inline">\(N\)</span> and the budget for <span style="font-variant: small-caps;">MaxValDP</span> and running time against <span class="math inline">\(N\)</span> and the maximum value for <span style="font-variant: small-caps;">MinCostDP</span>. Refer to figure <a href="result.html#fig:plot-function">4.2</a>, for <span style="font-variant: small-caps;">MinCostDP</span>, based on the curvature of the plot surface, we can see that the relationship between <span class="math inline">\(N\)</span> and the optimal value is clearly non-linear, in fact, we can even see that it is indeed quadratic as the theory suggested. Whereas, for <span style="font-variant: small-caps;">MaxValDP</span>, we can see that the budget and <span class="math inline">\(N\)</span> seem to be linearly related to the optimal value.</p>
 
+</div>
 </div>
             </section>
 
