--- a/document/references.html
+++ b/document/references.html
@@ -71,9 +71,9 @@
 </ul></li>
 <li class="chapter" data-level="2" data-path="algorithms.html"><a href="algorithms.html"><i class="fa fa-check"></i><b>2</b> Algorithms</a></li>
 <li class="chapter" data-level="3" data-path="reduction.html"><a href="reduction.html"><i class="fa fa-check"></i><b>3</b> Reduction, Beauty and Peril</a></li>
-<li class="chapter" data-level="4" data-path="resdis.html"><a href="resdis.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
-<li class="chapter" data-level="4.1" data-path="resdis.html"><a href="resdis.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
-<li class="chapter" data-level="4.2" data-path="resdis.html"><a href="resdis.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
+<li class="chapter" data-level="4" data-path="result.html"><a href="result.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
+<li class="chapter" data-level="4.1" data-path="result.html"><a href="result.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
+<li class="chapter" data-level="4.2" data-path="result.html"><a href="result.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
