--- a/document/conclusion.html
+++ b/document/conclusion.html
@@ -33,7 +33,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
-<link rel="prev" href="resdis.html">
+<link rel="prev" href="result.html">
 <link rel="next" href="references.html">
 
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
@@ -71,9 +71,9 @@
 </ul></li>
 <li class="chapter" data-level="2" data-path="algorithms.html"><a href="algorithms.html"><i class="fa fa-check"></i><b>2</b> Algorithms</a></li>
 <li class="chapter" data-level="3" data-path="reduction.html"><a href="reduction.html"><i class="fa fa-check"></i><b>3</b> Reduction, Beauty and Peril</a></li>
-<li class="chapter" data-level="4" data-path="resdis.html"><a href="resdis.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
-<li class="chapter" data-level="4.1" data-path="resdis.html"><a href="resdis.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
-<li class="chapter" data-level="4.2" data-path="resdis.html"><a href="resdis.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
+<li class="chapter" data-level="4" data-path="result.html"><a href="result.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
+<li class="chapter" data-level="4.1" data-path="result.html"><a href="result.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
+<li class="chapter" data-level="4.2" data-path="result.html"><a href="result.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -96,7 +96,7 @@
             <section class="normal" id="section-">
 <div id="conclusion" class="section level1">
 <h1><span class="header-section-number">Section 5</span> Conclusion</h1>
-<p>We can come up with the conclusion that <span style="font-variant: small-caps;">MaxValDP</span>, the vanilla flavor, shows why it is generally favored. It guarantees the optimal value (100% accuracy) and relatively acceptable running time. The versatile <span style="font-variant: small-caps;">FPTAS</span> actually does worse in both aspect, accuracy and running time; but to do justice to it, it shines for its versatility; as compared to other approximation method which targets a specific range of error, e.g. <span style="font-variant: small-caps;">Greedy</span>, it will not perform as good, otherwise, we will deem <span style="font-variant: small-caps;">Greedy</span> as useless and get rid of it. <span style="font-variant: small-caps;">Greedy</span>, though, runs amazingly fast and yields acceptable accuracy. The last flavor, <span style="font-variant: small-caps;">MinCostDP</span> is like chocolate. Hardly can anyone argues whether chocolate or vanilla is ultimately the better flavor. It is actually pretty hard to come up with an example to show that a type of pastries must come with chocolate instead of vanilla … even brownies can come with vanilla. We guess the moral of the story is not that you can use either dynamic programming approach to solve any Maximum 0-1 Knapsack problem, but some go better with <span style="font-variant: small-caps;">MaxValDP</span> and others go better with <span style="font-variant: small-caps;">MinCostDP</span>, i.e. those problems with really high maximum value.</p>
+<p>We can come up with the conclusion that <span style="font-variant: small-caps;">MaxValDP</span>, the vanilla flavor, shows why it is generally favored. It guarantees the optimal value (with 100% accuracy) and relatively acceptable running time. The versatile <span style="font-variant: small-caps;">FPTAS</span> actually does worse in both aspect, accuracy and running time; but to do justice to it, it shines for its versatility; as compared to other approximation method which targets a specific range of error, e.g. <span style="font-variant: small-caps;">Greedy</span>, it will not perform as good, otherwise, we will deem <span style="font-variant: small-caps;">Greedy</span> as useless and get rid of it. <span style="font-variant: small-caps;">Greedy</span>, though, runs amazingly fast and yields acceptable accuracy. The last flavor, <span style="font-variant: small-caps;">MinCostDP</span> is like chocolate. Hardly can anyone argue whether chocolate or vanilla is ultimately the better flavor. Perhaps, even on situational basis: it is actually pretty hard to come up with an example to show that a type of pastries must come with chocolate instead of vanilla … apparently brownies can also come with vanilla. We guess the moral of the story is not that you can use either dynamic programming approach to solve any Maximum 0-1 Knapsack problem, but some go better with <span style="font-variant: small-caps;">MaxValDP</span> and others go better with <span style="font-variant: small-caps;">MinCostDP</span>, such as those problems with really high maximum value.</p>
 
 </div>
             </section>
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div>
-<a href="resdis.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="result.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="references.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
