--- a/document/index.html
+++ b/document/index.html
@@ -71,9 +71,9 @@
 </ul></li>
 <li class="chapter" data-level="2" data-path="algorithms.html"><a href="algorithms.html"><i class="fa fa-check"></i><b>2</b> Algorithms</a></li>
 <li class="chapter" data-level="3" data-path="reduction.html"><a href="reduction.html"><i class="fa fa-check"></i><b>3</b> Reduction, Beauty and Peril</a></li>
-<li class="chapter" data-level="4" data-path="resdis.html"><a href="resdis.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
-<li class="chapter" data-level="4.1" data-path="resdis.html"><a href="resdis.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
-<li class="chapter" data-level="4.2" data-path="resdis.html"><a href="resdis.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
+<li class="chapter" data-level="4" data-path="result.html"><a href="result.html"><i class="fa fa-check"></i><b>4</b> Result and Discussion</a><ul>
+<li class="chapter" data-level="4.1" data-path="result.html"><a href="result.html#accuracy"><i class="fa fa-check"></i><b>4.1</b> Accuracy</a></li>
+<li class="chapter" data-level="4.2" data-path="result.html"><a href="result.html#running-time"><i class="fa fa-check"></i><b>4.2</b> Running Time</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
@@ -101,7 +101,7 @@
 </div>
 <div id="introduction" class="section level1 unnumbered">
 <h1>Introduction</h1>
-<p>In this project, we explore several different algorithms (flavors) to solve Maximum 0-1 Knapsack, a classic NP-Hard problem, <em>in a reasonable amount of time</em>. In our experiments, we want to show the difference between running time and the optimal value obtained using these various algorithms.</p>
+<p>In this project, we shall explore several different algorithms (flavors) to solve Maximum 0-1 Knapsack, a classic NP-Hard problem, <em>in a reasonable amount of time</em>. In our experiments, we want to show the differences between the running time and the optimal values obtained using these various algorithms.</p>
 <p>We also want to take a side-track and demonstrate how Maximum 0-1 Knapsack can be used to solve 3SAT, the iconic NP-Complete problem, via the polynomial time reduction from 3SAT to Decision 0-1 Knapsack <span class="citation">(O’Connell <a href="#ref-oconnell2013">2013</a>)</span>.</p>
 <p>We are going to explore 4 different flavors of Knapsack solver, including:</p>
 <ul>
